<resources>
    <string name="app_name">OLCorp</string>
    <string name="organization_unit">Organization Unit</string>
    <string name="groups">Groups</string>
    <string name="users">Users</string>


    <string name="add_btn_ou">ADD ORGANIZATION UNIT</string>
    <string name="add_btn_group">ADD GROUP</string>
    <string name="add_btn_user">ADD USER</string>


    <string name="create_ou">CREATE ORGANIZATION UNIT</string>
    <string name="update_ou">UPDATE ORGANIZATION UNIT</string>
    <string name="organization_unit_name">Organization Unit Name</string>

    <string name="create_group">CREATE GROUP</string>
    <string name="update_group">UPDATE GROUP</string>
    <string name="group_name">Group Name</string>

    <string name="create_user">CREATE USER</string>
    <string name="update_user">UPDATE USER</string>
    <string name="user_name">User Name</string>

    <string name="save_btn">SAVE</string>
    <string name="update_btn">UPDATE</string>


    <string name="user_lastname">Lastname</string>
    <string name="user_firstname">Firstname</string>
    <string name="user_mail">Mail</string>
    <string name="user_telephone">Telephone</string>


</resources>
