<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".core.EditUserActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_user"
        android:gravity="center_horizontal"
        android:textSize="32sp"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/user_name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:hint="@string/user_name" />

    <EditText
        android:id="@+id/user_lastname"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:hint="@string/user_lastname" />

    <EditText
        android:id="@+id/user_firstname"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:hint="@string/user_firstname" />

    <EditText
        android:id="@+id/user_mail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:hint="@string/user_mail" />

    <EditText
        android:id="@+id/user_telephone"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:hint="@string/user_telephone" />


    <Button
        android:id="@+id/update_user_save_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/save_btn"
        android:layout_marginTop="25dp"
        android:layout_gravity="center_horizontal" />

</LinearLayout>