<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".core.CreateUserActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_user"
        android:gravity="center_horizontal"
        android:textSize="32sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        />


    <EditText
        android:id="@+id/user_name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:hint="@string/user_name"
        />

    <EditText
        android:id="@+id/user_lastname"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:hint="@string/user_lastname"
        />

    <EditText
        android:id="@+id/user_firstname"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:hint="@string/user_firstname"
        />

    <EditText
        android:id="@+id/user_mail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:hint="@string/user_mail"
        />

    <EditText
        android:id="@+id/user_telephone"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:hint="@string/user_telephone"
        />



    <Spinner
        android:id="@+id/spinner_ou"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:layout_gravity="center_horizontal"
        >
    </Spinner>

    <Spinner
        android:id="@+id/spinner_group"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        >
    </Spinner>




    <Button
        android:id="@+id/create_user_save_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/save_btn"
        android:layout_marginTop="25dp"
        android:layout_gravity="center_horizontal"
        />




</LinearLayout>