<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".core.CreateOrganizationUnitActivity"
    android:orientation="vertical"
    >



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_ou"
        android:gravity="center_horizontal"
        android:textSize="32sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        />


    <EditText
        android:id="@+id/ou_name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="55dp"
        android:hint="@string/organization_unit_name"
        />


    <Button
        android:id="@+id/create_ou_save_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/save_btn"
        android:layout_marginTop="25dp"
        android:layout_gravity="center_horizontal"
        />







</LinearLayout>