<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".core.EditGroupActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_group"
        android:gravity="center_horizontal"
        android:textSize="32sp"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/group_name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="55dp"
        android:hint="@string/group_name" />

    <Spinner
        android:id="@+id/spinner_ou"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:layout_gravity="center_horizontal">
    </Spinner>

    <Button
        android:id="@+id/update_group_save_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/save_btn"
        android:layout_marginTop="25dp"
        android:layout_gravity="center_horizontal" />

</LinearLayout>